<resources>
    <string name="app_name">E-Shop app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introFragGreet">Explore a world of shopping at your fingertips and Unleash\n a world of deals and \n discounts.</string>
    <string name="startButtonText">START</string>
    <string name="registerBtn">Register</string>
    <string name="LogInBtn">Log In</string>
    <string name="DontHaveAccount">Dont have acconut? Register Here.</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="LoginUsing">Login Using :</string>
    <string name="registerfrag">Let\'s Register</string>
    <string name="AlreadyHaveAccount">Alredy Have Account? log in</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="ic_home">Home\n</string>
    <string name="ic_search">Search</string>
    <string name="ic_cart">Cart</string>
    <string name="ic_profile">Profile</string>
</resources>